# docs/swagger.yaml
@@ -179,28 +179,6 @@ paths:
       tags:
       - products
   /api/v1/resume:
-    get:
-      consumes:
-      - application/json
-      description: Get a list of all resumes
-      parameters:
-      - description: API Key
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Resume'
-            type: array
-      summary: List all resumes
-      tags:
-      - resume
     post:
       consumes:
       - application/json
@@ -334,6 +312,27 @@ paths:
               type: string
             type: object
       summary: Get a presigned URL for uploading a resume
+      tags:
+      - resume
+  /api/v1/resume/latest:
+    get:
+      consumes:
+      - application/json
+      description: Get the most recently created resume
+      parameters:
+      - description: API Key
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Resume'
+      summary: Get latest resume
       tags:
       - resume
   /api/v1/session/chat:
